tests/ui/borrowck/issue-62107-match-arm-scopes.stderr
error[E0381]: used binding `e` isn't initialized
  --> $DIR/issue-62107-match-arm-scopes.rs:4:9
   |
LL |     let e: i32;
   |         - binding declared here but left uninitialized
LL |     match e {
LL |         ref u if true => {}
   |         ^^^^^ `e` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let e: i32 = 42;
   |                ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
